--- a/registrationdetails.html
+++ b/registrationdetails.html
@@ -23,21 +23,28 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
-  <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-lg-4 py-lg-4 mx-auto">
-    <!-- Links above the navbar -->
-    <div class="w-100 bg-light py-2 border-bottom">
+  <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4 mx-auto">
+
+    <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
       <div class="container d-flex justify-content-between align-items-center">
-        <a href="faq.html" class="text-dark text-decoration-none">1</a>
-        <a href="support.html" class="text-dark text-decoration-none">2</a>
-        <a href="contact.html" class="text-dark text-decoration-none">3</a>
-        <a href="index.html">
-          <img style="height: 25px;" src="images/IEEE_kol_logo.png" alt="logo" class="mb-1 mx-auto img-fluid" width="40" height="25">
+        <a target="_blank" href="https://nitjsr.ac.in/">
+          <img style="height: 45px;" src="images/NITJSRNEWLOG.png" alt="logo" class="mb-1 mx-auto img-fluid" width="400" height="40">
         </a>
-        <a href="index.html">
-          <img style="height: 25px;" src="images/IEEE-Banglore.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="25">
+        <a target="_blank" href="https://ieeenitjsr.netlify.app/">
+          <img style="height: 45px;" src="images/ieeesys.png" alt="logo" class="mb-1 mx-auto img-fluid" width="200" height="55">
+        </a>
+        <!-- <a href="index.html">
+          <img style="height: 55px;" src="images/nitj.jpg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        </a> -->
+        <a target="_blank" href="https://ewh.ieee.org/r10/calcutta/">
+          <img style="height: 45px;" src="images/IEEEKSpng.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
+        </a>
+        <a target="_blank" href="https://www.ieee.org/">
+          <img style="height: 45px;" src="images/IEEELOGO.png" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="25">
         </a>
       </div>
     </div>
+    
   
     <!-- Main Navbar -->
     <div class="container-fluid">
@@ -99,25 +106,25 @@
   <main class="container mx-auto p-6">
     <h1 class="text-4xl font-bold mb-4 mt-40">Registration Details</h1>
     <ul class="list-disc pl-5 space-y-2">
-      <li>Early Bird Registration: <strong>$200</strong> (until 10th April 2024)</li>
-      <li>Regular Registration: <strong>$250</strong> (11th April - 1st May 2024)</li>
-      <li>Late Registration: <strong>$300</strong> (after 1st May 2024)</li>
+      <li>Early Bird Registration: <strong>$200</strong> (until 15th September 2025)</li>
+      <li>Regular Registration: <strong>$250</strong> (10th September - 30 September 2025)</li>
+      <li>Late Registration: <strong>$300</strong> (after 1st October 2025)</li>
     </ul>
     <p class="mt-4">Register <a href="#" class="text-blue-500 hover:underline">here</a>.</p>
   </main>
   <footer id="footer">
-    <div class="container padding-medium ">
+    <div class="container padding-medium">
       <div class="row">
         <div class="col-md-4 my-3">
           <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> 30 E Lake St,
-            Chicago, USA</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (510) 710-3464</p>
-          <p><iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email"
-              style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: </span>
-            info@ICE2CPT.com
+          <p class="lead break text-justify">
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> NIT Jamshedpur, India.
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (+91) <b>9982124347</b>
+          </p>
+          <p>
+            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: ice2cpt@gmail.com</span>
           </p>
         </div>
         <div class="col-md-2 my-3">
@@ -130,7 +137,7 @@
               <li class="menu-item mb-2">
                 <a href="about.html" class="footer-link">About us</a>
               </li>
-               <li class="menu-item mb-2">
+              <li class="menu-item mb-2">
                 <a href="contact.html" class="footer-link">Contact</a>
               </li>
             </ul>
@@ -179,7 +186,6 @@
                     <iconify-icon class="social-icon fs-4 me-2" icon="ri:youtube-fill"></iconify-icon>
                   </a>
                 </li>
-
               </ul>
             </div>
           </div>
