--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="container-fluid">
       <div class="main-logo">
         <a href="index.html">
-          <img style="height: 80px;" src="images/logo.png" alt="logo" class="mb-1 mx-auto img-fluid" width="90" height="90">
+          <img style="height: 75px;" src="images/logo.gif" alt="logo" class="mb-0 mx-auto img-fluid" width="100" height="100">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -147,32 +147,41 @@
         <div class="offcanvas-body justify-content-end">
           <ul class="navbar-nav menu-list list-unstyled align-items-lg-center d-flex gap-md-3 mb-0">
             <li class="nav-item dropdown text-white">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Information of Authors</a>
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Call of Papers</a>
+              <ul class="dropdown-menu" aria-labelledby="pages">
+                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown text-white">
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
                 <li><a href="crucialdates.html" class="dropdown-item">Crucial Dates</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
                 <li><a href="manuscriptsubmission.html" class="dropdown-item">Manuscript Submission</a></li>
-                <li><a href="registrationdetails.html" class="dropdown-item">Registration Details</a></li>
+                <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
+                <li><a href="venue.html" class="dropdown-item">Venue</a></li>
                 <li><a href="awards.html" class="dropdown-item">Awards</a></li>
               </ul>
             </li>
-            <li class="nav-item text-center text-uppercase ml-auto">
-              <a href="organizingcommittee.html" class="nav-link mx-0.8">Organizing Committee</a>
-            </li>
+
+            
             <li class="nav-item text-capitalize text-center">
-              <a href="keynotespeakers.html" class="nav-link mx-0.8">Keynote Speakers</a>
+              <a href="keynotespeakers.html" class="nav-link mx-1">Speakers</a>
+            </li>
+            <li class="nav-item text-center text-uppercase ml-auto">
+              <a href="organizingcommittee.html" class="nav-link mx-1">Committee</a>
             </li>
             <li class="nav-item text-light">
-              <a href="technicalprogramcommittee.html" class="nav-link mx-0.8">Technical Program Committee</a>
+              <a href="sponsorship.html" class="nav-link mx-1">Sponsors</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="shop" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="shop">
-                <li><a href="sponsorship.html" class="dropdown-item">Technical/Financial Sponsorship</a></li>
-                <li><a href="venue.html" class="dropdown-item">Conference Venue</a></li>
-                <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
-                <li><a href="contact.html" class="dropdown-item">Contact Us</a></li>
-              </ul>
+            <li class="nav-item text-light">
+              <a href="registrationdetails.html" class="nav-link mx-1">Registration</a>
+            </li>
+            <li class="nav-item text-light">
+              <a href="contact.html" class="nav-link mx-1">Contact Us</a>
+            </li>
             </li>
           </ul>
           <div class="d-none d-lg-flex align-items-center ms-5">
@@ -569,7 +578,7 @@
     <div class="container py-3">
       <div class="row mt-3">
         <div class="col-md-6 copyright">
-          <p>© 2024 ICE2CPT. All rights reserved.</p>
+          <p>© ICE2CPT 2024 || Department of Electrical Engineering, NIT Jamshedpur.</p>
         </div>
       </div>
     </div>
