--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
 <body class="bg-gray-100 text-gray-800">
   <!-- Header -->
-<<<<<<< HEAD
+
   <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-lg-4 py-lg-4 mx-auto">
     <!-- Links above the navbar -->
     <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
@@ -45,13 +45,7 @@
     <div class="container-fluid">
       <div class="main-logo">
         <a href="index.html">
-          <img style="height: 80px;" src="images/logo.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="70">
-=======
-  <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4">
-    <div class="container-fluid">
-      <div class="main-logo">
-        <a href="index.html">
-          <img style="height: 80px" src="images/logo.gif" alt="logo" class="img-fluid">
+          <img style="height: 75px;" src="images/logo.gif" alt="logo" class="mb-0 mx-auto img-fluid" width="100" height="100">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -64,192 +58,94 @@
         <div class="offcanvas-body justify-content-end">
           <ul class="navbar-nav menu-list list-unstyled align-items-lg-center d-flex gap-md-3 mb-0">
             <li class="nav-item dropdown text-white">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Information of Authors</a>
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Call of Papers</a>
+              <ul class="dropdown-menu" aria-labelledby="pages">
+                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown text-white">
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
                 <li><a href="crucialdates.html" class="dropdown-item">Crucial Dates</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
                 <li><a href="manuscriptsubmission.html" class="dropdown-item">Manuscript Submission</a></li>
-                <li><a href="registrationdetails.html" class="dropdown-item">Registration Details</a></li>
+                <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
+                <li><a href="venue.html" class="dropdown-item">Venue</a></li>
                 <li><a href="awards.html" class="dropdown-item">Awards</a></li>
               </ul>
             </li>
-            <li class="nav-item text-center text-uppercase ml-auto">
-              <a href="organizingcommittee.html" class="nav-link mx-0.8">Organizing Committee</a>
-            </li>
+
+            
             <li class="nav-item text-capitalize text-center">
-              <a href="keynotespeakers.html" class="nav-link mx-0.8">Keynote Speakers</a>
+              <a href="keynotespeakers.html" class="nav-link mx-1">Speakers</a>
+            </li>
+            <li class="nav-item text-center text-uppercase ml-auto">
+              <a href="organizingcommittee.html" class="nav-link mx-1">Committee</a>
             </li>
             <li class="nav-item text-light">
-              <a href="technicalprogramcommittee.html" class="nav-link mx-0.8">Technical Program Committee</a>
+              <a href="sponsorship.html" class="nav-link mx-1">Sponsors</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="shop" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="shop">
-                <li>
-                  <a href="sponsorship.html" class="dropdown-item">Technical/Financial Sponsorship</a>
-                </li>
-                <li>
-                  <a href="venue.html" class="dropdown-item">Conference Venue</a>
-                </li>
-                <li>
-                  <a href="confprogram.html" class="dropdown-item">Conference Program</a>
-                </li>
-                <li>
-                  <a href="contact.html" class="dropdown-item">Contact Us</a>
-                </li>
-              </ul>
+            <li class="nav-item text-light">
+              <a href="registrationdetails.html" class="nav-link mx-1">Registration</a>
+            </li>
+            <li class="nav-item text-light">
+              <a href="contact.html" class="nav-link mx-1">Contact Us</a>
+            </li>
             </li>
           </ul>
           <div class="d-none d-lg-flex align-items-center ms-5">
-            <ul class="d-flex justify-content-end list-unstyled m-0"></ul>
+            <ul class="d-flex justify-content-end list-unstyled m-0">
+            <ul class="d-flex justify-content-end  list-unstyled m-0">
+            </ul>
           </div>
         </div>
       </div>
     </div>
     <div class="container-fluid d-lg-none">
-      <div class="d-flex align-items-end mt-3"></div>
+      <div class="d-flex align-items-end mt-3">
+      </div>
     </div>
   </nav>
   <!-- Main Content -->
-  <main class="max-w-4xl mx-auto my-8 p-5">
-    <!-- Section 1 (Image on the right) -->
-    <section class="flex flex-col lg:flex-row mb-8 items-center gap-8">
-      <div class="flex-1 max-w-xs"></div>
-      <div class="flex-1 p-5">
-        <h2 class="text-2xl text-blue-600 mb-3">About NIT Jamshedpur</h2>
-        <p class="text-gray-600 text-lg"> National Institute of Technology Jamshedpur,earlier known as Regional Institute of Technology was established on 15th August 1960 as a joint venture of Government of India and the Government of Bihar in the chain of REC's (Regional Engineering College) in India with the aim to generate technical graduates of highest standards who could provide technological leadership to the region. It was among the first eight Regional Engineering Colleges (RECs) established as part of the Second Five-Year Plan (1956 - 1961). This was the only REC in the country which was named as RIT (Regional Institute of Technology). Therefore RIT Jamshedpur was actually the REC of undivided Bihar &amp; Jharkhand. The foundation stone of RIT (REC) Jamshedpur was laid by Dr. Srikrishna Sinha, the then chief minister of Bihar , with the aim of nurturing talent and setting high standards of education and excellence. On 27th December 2002, in the line of all other RECs of India, RIT Jamshedpur (may be read as REC Jamshedpur too) was converted to National Institute of Technology Jamshedpur with the status of a Deemed University as per the decision of Govt. of India. The Institute is fully funded and governed by the Ministry of Education (MoE), Government of India since 1st April, 2003. On 15 August 2007, NIT Jamshedpur was given the status of the Institute of National Importance through an Act of the Parliament known as the NIT Act. The Institute has 11 departments including engineering, science and humanities. The Institute, with 200 faculty, 4000 students, 150 administrative and supporting staff, is a self-contained campus. It is located on the outskirts of Jamshedpur on 341.3 acres of sprawling, rolling hilly, wooded land. It combines natural beauty of countryside with urban glamour of an industrial area. The flowing river and picturesque backdrop of low hills on one side and large tracks of forest on the other make the campus an ideal place for higher learning and research. It has been growing from strength to strength ever since it was established in 1960. Situated in the heart of the rich mineral and industrial belt of Jharkhand State, the campus encompasses the Main building, the Library, the Computer Center, 13 hostels (7 Boys hostels, 6 Girls hostels), 2 hostels Under-Construction, staff quarters, Guest House, a Students Gymkhana, a Post-office , a branch of State Bank of India, two ATMs, central store and a dispensary. The hostels and departments are connected with high speed wireless LAN. The institute maintains courts for basketball, volleyball, badminton and tennis. Apart from this, it also has cricket, hockey and football grounds. The institute is poised for bright and promising future. The courses have been completely restructured and prepared as per the needs of society and industries. There is refreshing development on every front. The institute has achieved impressive placement for its students, with top industrial houses and software companies recruiting the students in large numbers. </p>
-      </div>
-    </section>
-    <!-- Section 2 (Image on the left) -->
-    <section class="flex flex-col lg:flex-row-reverse mb-8 items-center gap-8">
-      <div class="flex-1 max-w-xs">
-        <img src="images/item2.jpg" alt="ICEEPT Conference" class="w-full rounded-lg shadow-md">
-      </div>
-      <div class="flex-1 p-5">
-        <h2 class="text-2xl text-blue-600 mb-3">About ICEEPT</h2>
-        <p class="text-gray-600 text-lg"> ICEEPT is a renowned international conference that bridges academia and industry. Hosted by NIT Jamshedpur, it attracts professionals and researchers to share ideas on electrical, electronics, and computer science advancements. </p>
-      </div>
-    </section>
-    <!-- Section 3 (Image on the right) -->
-    <section class="flex flex-col lg:flex-row mb-8 items-center gap-8">
-      <div class="flex-1 max-w-xs">
-        <img src="images/item3.jpg" alt="Mission" class="w-full rounded-lg shadow-md">
-      </div>
-      <div class="flex-1 p-5">
-        <h2 class="text-2xl text-blue-600 mb-3">Our Mission</h2>
-        <p class="text-gray-600 text-lg"> We aim to foster global collaborations and technological advancements while solving real-world challenges. ICEEPT serves as a beacon for knowledge exchange and innovation in diverse technical domains. </p>
-      </div>
-    </section>
-    <!-- Section 4 (Image on the left) -->
-    <section class="flex flex-col lg:flex-row-reverse mb-8 items-center gap-8">
-      <div class="flex-1 max-w-xs">
-        <img src="images/item4.jpg" alt="Vision" class="w-full rounded-lg shadow-md">
-      </div>
-      <div class="flex-1 p-5">
-        <h2 class="text-2xl text-blue-600 mb-3">Our Vision</h2>
-        <p class="text-gray-600 text-lg"> To establish ICEEPT as a global platform for accelerating advancements in power technologies, fostering interdisciplinary knowledge, and driving solutions for sustainable development. </p>
+  <main class="container mx-auto p-45 padding-large">
+    <section id="service" class="padding-medium">
+      <div class="container">
+        <div class="text-justify">
+          <h1 class="display-6 fw-semibold">About <span style="color: blue;"> NIT Jamshedpur</span></h1>
+          <p class="text-gray-650 max-w-6xl text-justify mx-auto"> The National Institute of Technology Jamshedpur (NIT Jamshedpur), is an Institute of National Importance located at Jamshedpur, Jharkhand, India. Established as a Regional Institute of Technology in 1960, it was upgraded to NIT on 27 December 2002 with the status of Deemed University. It is one of the 31 NITs in India, and as such is directly under the control of the Ministry of Human Resource Development (MHRD). It is the third in the chain of eight NITs established as a part of the Second Five Year Plan (1956–61) by the Government of India. The Institute has twelve departments including engineering, science and humanities. The institute offers a 4-year Bachelor of Technology degree in the various streams. The institute also offers Master and Ph.D degrees in various streams. The institute is bound to the quest for academic excellence and good governance, growth of institute, admired and respected institute for students, employees and industry, innovative leader.</p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
-  <!-- Footer -->
-  <footer id="footer">
-    <div class="container padding-medium">
-      <div class="row">
-        <div class="col-md-4 my-3">
-          <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
-          <p>
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align: text-bottom"></iconify-icon>
-            <span class="fw-bold">Address: NIT Jamshedpur, India.</span>
-          </p>
-          <p>
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align: text-bottom"></iconify-icon>
-            <span class="fw-bold">Phone: </span> (91) 9982124347
-          </p>
-          <p>
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email" style="vertical-align: text-bottom"></iconify-icon>
-            <span class="fw-bold">Email:&nbsp;ice2cpt@gmail.com</span>
-          </p>
+
+
+
+
+   <!-- Footer-->
+   <footer class="bg-black text-center py-5">
+    <div class="container px-5">
+        <div class="text-white-50 large">
+            <div class="mb-2">&copy; ICE2CPT-2025. All Rights Reserved.</div>
+            <span class="mx-2">&middot;</span>
+            <a href="./about.html">About Us</a>
+            <span class="mx-2">&middot;</span>
+            <a href="./contact.html">Contact Us</a>
+            <span class="mx-2">&middot;</span>
+            <a href="https://nitjsr.ac.in/" target="_blank" rel="noreferrer nofollow">NITJSR Website</a>
+            <hr>
+            <div class="mb-2">Developed by Electrical Engineering, NIT Jamshedpur</div>
         </div>
-        <div class="col-md-2 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">Links</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="menu-item mb-2">
-                <a href="index.html" class="footer-link">Home</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="about.html" class="footer-link">About us</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="contact.html" class="footer-link">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-2 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">support</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="menu-item mb-2">
-                <a href="faq.html" class="footer-link">FAQs</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="support.html" class="footer-link">Support</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-3 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">Follow us</h5>
-            <div class="social-links mt-4">
-              <ul class="d-flex list-unstyled gap-3">
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:facebook-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:twitter-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:pinterest-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:instagram-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:youtube-fill"></iconify-icon>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
-  <div id="footer-bottom">
-    <hr class="m-0 text-black-50">
-    <div class="container py-3">
-      <div class="row mt-3">
-        <div class="col-md-6 copyright">
-          <p>© 2024 EPREC. All rights reserved.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+</footer>
+
+
+
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js" style=""></script>
-<<<<<<< HEAD
