--- a/callforpapers.html
+++ b/callforpapers.html
@@ -53,7 +53,7 @@
     <div class="container-fluid">
       <div class="main-logo">
         <a href="index.html">
-          <img style="height: 80px;" src="images/logo.png" alt="logo" class="mb-1 mx-auto img-fluid" width="80" height="70">
+          <img style="height: 75px;" src="images/logo.gif" alt="logo" class="mb-0 mx-auto img-fluid" width="100" height="100">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
@@ -66,36 +66,46 @@
         <div class="offcanvas-body justify-content-end">
           <ul class="navbar-nav menu-list list-unstyled align-items-lg-center d-flex gap-md-3 mb-0">
             <li class="nav-item dropdown text-white">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Information of Authors</a>
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Call of Papers</a>
+              <ul class="dropdown-menu" aria-labelledby="pages">
+                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown text-white">
+              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
                 <li><a href="crucialdates.html" class="dropdown-item">Crucial Dates</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
                 <li><a href="manuscriptsubmission.html" class="dropdown-item">Manuscript Submission</a></li>
-                <li><a href="registrationdetails.html" class="dropdown-item">Registration Details</a></li>
+                <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
+                <li><a href="venue.html" class="dropdown-item">Venue</a></li>
                 <li><a href="awards.html" class="dropdown-item">Awards</a></li>
               </ul>
             </li>
-            <li class="nav-item text-center text-uppercase ml-auto">
-              <a href="organizingcommittee.html" class="nav-link mx-0.8">Organizing Committee</a>
-            </li>
+
+            
             <li class="nav-item text-capitalize text-center">
-              <a href="keynotespeakers.html" class="nav-link mx-0.8">Keynote Speakers</a>
+              <a href="keynotespeakers.html" class="nav-link mx-1">Speakers</a>
+            </li>
+            <li class="nav-item text-center text-uppercase ml-auto">
+              <a href="organizingcommittee.html" class="nav-link mx-1">Committee</a>
             </li>
             <li class="nav-item text-light">
-              <a href="technicalprogramcommittee.html" class="nav-link mx-0.8">Technical Program Committee</a>
+              <a href="sponsorship.html" class="nav-link mx-1">Sponsors</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="shop" data-bs-toggle="dropdown" aria-expanded="false">More</a>
-              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="shop">
-                <li><a href="sponsorship.html" class="dropdown-item">Technical/Financial Sponsorship</a></li>
-                <li><a href="venue.html" class="dropdown-item">Conference Venue</a></li>
-                <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
-                <li><a href="contact.html" class="dropdown-item">Contact Us</a></li>
-              </ul>
+            <li class="nav-item text-light">
+              <a href="registrationdetails.html" class="nav-link mx-1">Registration</a>
+            </li>
+            <li class="nav-item text-light">
+              <a href="contact.html" class="nav-link mx-1">Contact Us</a>
+            </li>
             </li>
           </ul>
           <div class="d-none d-lg-flex align-items-center ms-5">
             <ul class="d-flex justify-content-end list-unstyled m-0">
+            <ul class="d-flex justify-content-end  list-unstyled m-0">
             </ul>
           </div>
         </div>
@@ -106,6 +116,9 @@
       </div>
     </div>
   </nav>
+
+
+
   <main class="container mx-auto p-6">
     <h1 class="text-4xl font-bold mb-4 mt-40">Call for Papers</h1>
     <p class="mb-4">The 1st IEEE International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend Conference invites submissions on the following themes:</p>
@@ -123,98 +136,23 @@
     </ul>
     <p class="mt-4">Submit your paper by <strong>30th June 2025</strong>.</p>
   </main>
-  <footer id="footer">
-    <div class="container padding-medium ">
-      <div class="row">
-        <div class="col-md-4 my-3">
-          <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
-          <p class="lead break text-justify">
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> NIT Jamshedpur, India
-          </p>
-          <p>
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (+91) <b>9982124347</b>
-          </p>
-          <p>
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: ice2cpt@gmail.com</span>
-          </p>
-        </div>
-        <div class="col-md-2 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">Links</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="menu-item mb-2">
-                <a href="index.html" class="footer-link">Home</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="about.html" class="footer-link">About us</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="contact.html" class="footer-link">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-2 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">support</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="menu-item mb-2">
-                <a href="faq.html" class="footer-link">FAQs</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="support.html" class="footer-link">Support</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-3 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">Follow us</h5>
-            <div class="social-links mt-4">
-              <ul class="d-flex list-unstyled gap-3">
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:facebook-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:twitter-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:pinterest-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:instagram-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:youtube-fill"></iconify-icon>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
 
-  <div id="footer-bottom">
-    <hr class="m-0 text-black-50">
-    <div class="container py-3">
-      <div class="row mt-3">
-        <div class="col-md-6 copyright">
-          <p>© 2024 ICE2CPT. All rights reserved.</p>
+   <!-- Footer-->
+   <footer class="bg-black text-center py-5">
+    <div class="container px-5">
+        <div class="text-white-50 large">
+            <div class="mb-2">&copy; ICE2CPT-2025. All Rights Reserved.</div>
+            <span class="mx-2">&middot;</span>
+            <a href="./about.html">About Us</a>
+            <span class="mx-2">&middot;</span>
+            <a href="./contact.html">Contact Us</a>
+            <span class="mx-2">&middot;</span>
+            <a href="https://nitjsr.ac.in/" target="_blank" rel="noreferrer nofollow">NITJSR Website</a>
+            <hr>
+            <div class="mb-2">Developed by Electrical Engineering, NIT Jamshedpur</div>
         </div>
-      </div>
     </div>
-  </div>
+</footer>
 
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
