--- a/index.html
+++ b/index.html
@@ -238,16 +238,13 @@
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active"> 
-                <img class="d-block img-fluid w-200 my-2 mx-auto border h-75 rounded p-3 py-2" src="images/nitj.jpg" >
+                <img class="d-block img-fluid w-200 my-2 mx-auto border h-75 rounded p-3 py-2" src="images/NITCON.png" >
               </div>
             </div> 
           </div>
         </div>
       </div>
-      <div class="transparent-box">
-        <img style="height: 200px;" src="images/trans.png" width="550px" alt="" class="">
-      </div>
-    </div>
+       </div>
   </section>
 
 
@@ -492,97 +489,23 @@
     </div>
   </section>
 
-  <footer id="footer">
-    <div class="container padding-medium">
-      <div class="row">
-        <div class="col-md-4 my-3">
-          <h5 class="text-uppercase fw-bold mb-4">Contact us</h5>
-          <p class="lead break text-justify">
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="mdi:location" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Address: </span> NIT Jamshedpur, India.
-          </p>
-          <p>
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="solar:phone-bold" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Phone: </span> (+91) <b>9982124347</b>
-          </p>
-          <p>
-            <iconify-icon class="social-icon text-primary fs-5 me-2" icon="ic:baseline-email" style="vertical-align:text-bottom"></iconify-icon> <span class="fw-bold">Email: ice2cpt@gmail.com</span>
-          </p>
+  <!-- Footer-->
+  <footer class="bg-black text-center py-5">
+    <div class="container px-5">
+        <div class="text-white-50 large">
+            <div class="mb-2">&copy; ICE2CPT-2025. All Rights Reserved.</div>
+            <span class="mx-2">&middot;</span>
+            <a href="./about.html">About Us</a>
+            <span class="mx-2">&middot;</span>
+            <a href="./contact.html">Contact Us</a>
+            <span class="mx-2">&middot;</span>
+            <a href="https://nitjsr.ac.in/" target="_blank" rel="noreferrer nofollow">NITJSR Website</a>
+            <hr>
+            <div class="mb-2">Developed by Electrical Engineering, NIT Jamshedpur</div>
         </div>
-        <div class="col-md-2 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">Links</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="menu-item mb-2">
-                <a href="index.html" class="footer-link">Home</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="about.html" class="footer-link">About us</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="contact.html" class="footer-link">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-2 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">support</h5>
-            <ul class="menu-list list-unstyled">
-              <li class="menu-item mb-2">
-                <a href="faq.html" class="footer-link">FAQs</a>
-              </li>
-              <li class="menu-item mb-2">
-                <a href="support.html" class="footer-link">Support</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-md-3 my-3">
-          <div class="footer-menu">
-            <h5 class="text-uppercase fw-bold mb-4">Follow us</h5>
-            <div class="social-links mt-4">
-              <ul class="d-flex list-unstyled gap-3">
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:facebook-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:twitter-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:pinterest-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:instagram-fill"></iconify-icon>
-                  </a>
-                </li>
-                <li class="social">
-                  <a href="#">
-                    <iconify-icon class="social-icon fs-4 me-2" icon="ri:youtube-fill"></iconify-icon>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
-  <div id="footer-bottom">
-    <hr class="m-0 text-black-50">
-    <div class="container py-3">
-      <div class="row mt-3">
-        <div class="col-md-6 copyright">
-          <p>© ICE2CPT 2024 || Department of Electrical Engineering, NIT Jamshedpur.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+</footer>
+
   <script src="js/jquery-1.11.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"></script>
