--- a/keynotespeakers.html
+++ b/keynotespeakers.html
@@ -113,24 +113,7 @@
   <!-- Main Content -->
   <main class="container mx-auto p-6">
     <h1 class="text-4xl font-bold mb-4 mt-40">Keynote Speakers</h1>
-    <p class="mb-6">Learn from world-renowned experts in the field. Our keynote speakers will inspire and educate you.</p>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/item1.jpg" alt="Speaker 1" class="w-24 h-24 mx-auto rounded-full mb-3">
-        <h2 class="text-lg font-bold">Dr. Alan Turing</h2>
-        <p class="text-sm text-gray-600">AI and Machine Learning Pioneer</p>
-      </div>
-      <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/item2.jpg" alt="Speaker 2" class="w-24 h-24 mx-auto rounded-full mb-3">
-        <h2 class="text-lg font-bold">Dr. Ada Lovelace</h2>
-        <p class="text-sm text-gray-600">Programming Visionary</p>
-      </div>
-      <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/item3.jpg" alt="Speaker 3" class="w-24 h-24 mx-auto rounded-full mb-3">
-        <h2 class="text-lg font-bold">Dr. Grace Hopper</h2>
-        <p class="text-sm text-gray-600">Computer Programming Innovator</p>
-      </div>
-    </div>
+    <p class="text-4xl font-bold mb-5 mt-10" >Comming Soon</p>
   </main>
    <!-- Footer-->
   <footer class="bg-black text-center py-5">
