--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -135,19 +135,20 @@
     <p class="mb-6">Meet the distinguished members of our International Advisory Committee who play a key role in shaping the content and structure of the conference.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/item1.jpg" alt="Committee Member 1" class="w-24 h-24 mx-auto rounded-full mb-3">
-        <h2 class="text-lg font-bold">Dr. John Doe</h2>
-        <p class="text-sm text-gray-600">Professor of Computer Science, XYZ University</p>
+        <img src="images/Andy.jpg" alt="Committee Member 1" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <h2 class="text-lg font-bold">Prof. Andy Chen</h2>
+        <p class="text-sm text-gray-600">IEEE Systems Council 2025 President, President & CEO, Catronic Enterprise, Canada
+        </p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/item2.jpg" alt="Committee Member 2" class="w-24 h-24 mx-auto rounded-full mb-3">
-        <h2 class="text-lg font-bold">Dr. Jane Smith</h2>
-        <p class="text-sm text-gray-600">Lead Researcher, ABC Tech Labs</p>
+        <img src="images/Hironori.jpeg" alt="Committee Member 2" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <h2 class="text-lg font-bold">Prof. Hironori Washizaki</h2>
+        <p class="text-sm text-gray-600">IEEE Computer Society 2025 President, Waseda University</p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/item3.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
-        <h2 class="text-lg font-bold">Dr. Alice Johnson</h2>
-        <p class="text-sm text-gray-600">Director of AI Research, Tech Innovations</p>
+        <img src="images/Hadi.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <h2 class="text-lg font-bold">Prof. Hadi Y. Kanaan</h2>
+        <p class="text-sm text-gray-600">Saint Joseph University of Beirut</p>
       </div>
     </div>
   </main>
