--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -131,7 +131,7 @@
   
   <!-- Main Content -->
   <main class="container mx-auto p-6">
-    <h1 class="text-4xl font-bold mb-4 mt-40">International Advisory Committee</h1>
+    <h1 class="text-4xl font-bold mb-4 mt-48">International Advisory Committee</h1>
     <p class="mb-6">Meet the distinguished members of our International Advisory Committee who play a key role in shaping the content and structure of the conference.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
@@ -150,9 +150,15 @@
         <h2 class="text-lg font-bold">Prof. Hadi Y. Kanaan</h2>
         <p class="text-sm text-gray-600">Saint Joseph University of Beirut</p>
       </div>
+
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/Hadi.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <h2 class="text-lg font-bold">Prof. ATIF IQBAL</h2>
+        <p class="text-sm text-gray-600">Department of Electrical Engineering, Qatar University, Doha, Qatar</p>
+      </div>
     </div>
   </main>
-
+  
     <!-- Footer-->
     <footer class="bg-black text-center py-5">
       <div class="container px-5">
