--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -152,7 +152,7 @@
       </div>
 
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/Hadi.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <img src="images/Atif.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
         <h2 class="text-lg font-bold">Prof. ATIF IQBAL</h2>
         <p class="text-sm text-gray-600">Department of Electrical Engineering, Qatar University, Doha, Qatar</p>
       </div>
