--- a/callforpapers.html
+++ b/callforpapers.html
@@ -122,18 +122,17 @@
 
   <main class="container mx-auto p-6">
     <h2 class="text-4xl font-bold mb-4 mt-40">Call for Papers</h2>
-    <p class="mb-4">The 1st IEEE International Conference on Electrical, Electronics And Computer Science With Advance Power Technologies- A Future Trend invites submissions on the following themes:</p>
+    <p class="mb-4">The conference invites high-quality research contributions in all areas of Electrical, Electronics, and Computer Science. Topics of interest include, but are not limited to:</p>
     <ul class="list-disc pl-5 space-y-2">
-      <li>Control Systems and Automation</li>
-      <li>Advanced Power Electronics and Drives</li>
-      <li>Energy Storage and Battery Technologies</li>
-      <li>Power System Stability and Power Quality</li>
+     
+      <li>Smart Power Systems, Electric Vehicles, and Energy Management</li>
+      <li>Advanced Robotics, Autonomous Systems, and Control Technologies</li>
+      <li>Renewable Energy Systems, Solar Power, and Grid Integration</li>
+      <li>Wireless Communication, IoT, and Next-Generation Networks</li>
       <li>Electromagnetic and Wireless Technologies</li>
-      <li>Signal Processing and Communication Systems</li>
-      <li>Renewable Energy Integration and Smart Grids</li>
-      <li>Embedded Systems and IoT in Power Applications</li>
-      <li>Emerging Trends in Electric Vehicles and Mobility</li>
-      <li>Artificial Intelligence and Machine Learning in Energy Systems</li>
+      <li>Cybersecurity, Blockchain, and Quantum Computing for Secure Systems</li>
+      <li>Artificial Intelligence, Machine Learning, and Computer Vision</li>
+   
     </ul>
     <p class="mt-4">Submit your paper by <strong>30th June 2025</strong>.</p>
   </main>
