--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
+                <li><a href="SS.html" class="dropdown-item">Call for Special Session</a></li>
                 <li><a href="crucialdates.html" class="dropdown-item">Important Dates</a></li>
                 <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
                 <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Gauidlines</a></li>
@@ -519,7 +519,7 @@
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <script style="">
     function updateCountdown() {
-      const targetDate = new Date("October 29, 2025 00:00:00").getTime();
+      const targetDate = new Date("October 29, 2025 09:00:00").getTime();
       const now = new Date().getTime();
       const difference = targetDate - now;
       if (difference < 0) {
