--- a/SS.html
+++ b/SS.html
@@ -79,11 +79,10 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
+                <li><a href="SS.html" class="dropdown-item">Call for Special Session</a></li>
                 <li><a href="crucialdates.html" class="dropdown-item">Important Dates</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
-                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Gauidlines</a></li>
+                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Guidelines</a></li>
                 <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
                 </ul>
             </li>
@@ -119,6 +118,8 @@
       </div>
     </div>
   </nav>
+
+  
 
   <main class="container mx-auto p-48">
        
@@ -437,14 +438,12 @@
 <span style="font-size:18px;" class="wixui-rich-text__text"><span style="font-family:helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;" class="wixui-rich-text__text"><span class="color_33 wixui-rich-text__text"><span style="font-weight:bold;" class="wixui-rich-text__text">Session Chairs:</span></span></span></span><span style="font-size:18px;" class="wixui-rich-text__text"><span style="font-family:helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;" class="wixui-rich-text__text"><span style="color:#000000;" class="wixui-rich-text__text"> When a SS is finally accepted by the conference, SS organizers will serve as Session chairs in the conference. In some extenuated circumstance, Technical Program chairs and Conference General Chairs might take up the full control of appointing the Session Chairs, should the SS organizers be unable to participate in the conference.</span><br class="wixui-rich-text__text">
 <br class="wixui-rich-text__text">
 <span class="color_33 wixui-rich-text__text"><span style="font-weight:bold;" class="wixui-rich-text__text">Proposal Content:</span></span><span style="color:#000000;" class="wixui-rich-text__text"> The special session&rsquo;s proposal content should include the following information (as mentioned in the MS word template):<br class="wixui-rich-text__text">
-1. Title of the Special Session.<br class="wixui-rich-text__text">
-2. Brief description of the area of concern (~100 words), with special emphasis on why this is an interesting and significant topic.<br class="wixui-rich-text__text">
-3. Name and contact information of 2 to 3 special session organizers (multi-nationals preferred and multi-institutional mandatory), who are willing to promote and organize a sufficient amount of quality submissions to the special session. Please also indicate the background of the organizers.<br class="wixui-rich-text__text">
-4. A list of potential authors and their affiliations.<br class="wixui-rich-text__text">
-5. A list of potential reviewers and their affiliations (20 minimum).
+<li>Title of the Special Session.<br class="wixui-rich-text__text"></li>
+<li>Brief description of the area of concern (~100 words), with special emphasis on why this is an interesting and significant topic.<br class="wixui-rich-text__text"></li>
+<li> Name and contact information of 2 to 3 special session organizers (multi-nationals preferred and multi-institutional mandatory), who are willing to promote and organize a sufficient amount of quality submissions to the special session. Please also indicate the background of the organizers.<br class="wixui-rich-text__text"></li>
+<li> A list of potential authors and their affiliations.<br class="wixui-rich-text__text"></li>
+<li> A list of potential reviewers and their affiliations (20 minimum).</li>
   
-
-
 </main>
 
 
