--- a/callforpapers.html
+++ b/callforpapers.html
@@ -79,11 +79,10 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
+                <li><a href="SS.html" class="dropdown-item">Call for Special Session</a></li>
                 <li><a href="crucialdates.html" class="dropdown-item">Important Dates</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
-                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Gauidlines</a></li>
+                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Guidelines</a></li>
                 <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
                 </ul>
             </li>
@@ -120,6 +119,8 @@
     </div>
   </nav>
 
+  
+
   <main class="container mx-auto p-6">
     <h2 class="text-4xl font-bold mb-4 mt-40">Call for Papers</h2>
     <p class="mb-4">The conference invites high-quality research contributions in all areas of Electrical, Electronics, and Computer Science. Topics of interest include, but are not limited to:</p>
@@ -136,6 +137,20 @@
     </ul>
     <p class="mt-4">Submit your paper by <strong>30th June 2025</strong>.</p>
   </main>
+
+  <section id="countdown-paper" class="container-fluid my-5">
+    <div class="row">
+        <div id="paper-submission" class="text-center p-" style="background-color: rgba   1Z(255, 255, 255, 0.8); border-radius: 10px; box-shadow: 0px 0px 4px black, 0px 0px 4px black;">
+          <a target="_blank" href="https://cmt3.research.microsoft.com/ICE2CPT2025"> <h2 class="mb-3" font-weight="bold">Click Below for Paper Submission</h2> <button class="btn btn-primary">Submit Paper</button> </a>
+        </div>
+      </div>
+    
+    </div>
+  </section>
+
+
+
+
 
    <!-- Footer-->
    <footer class="bg-black text-center py-5">
