--- a/contact.html
+++ b/contact.html
@@ -76,11 +76,10 @@
               <li class="nav-item dropdown text-white">
                 <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
                 <ul class="dropdown-menu" aria-labelledby="pages">
-                  <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
-                  <li><a href="callforpapers.html" class="dropdown-item">Call for Special Session</a></li>
+                  <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
+                  <li><a href="SS.html" class="dropdown-item">Call for Special Session</a></li>
                   <li><a href="crucialdates.html" class="dropdown-item">Important Dates</a></li>
-                  <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
-                  <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Gauidlines</a></li>
+                  <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Guidelines</a></li>
                   <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
                   </ul>
               </li>
@@ -116,6 +115,7 @@
         </div>
       </div>
     </nav>
+    
 
   
     <!-- Main Contact Container -->
@@ -155,7 +155,7 @@
   <!-- Right Section - Contact Form -->
   <div class="w-full md:w-1/2 bg-teal-100 p-8 rounded-lg shadow-lg">
     <h2 class="text-center text-xl font-bold text-gray-800 mb-6">Contact Us</h2>
-    <form action="#">
+    <form action="suryaprakash.ee@nitjsr.ac.in">
       <label for="name" class="block text-sm font-semibold text-gray-600 mb-2">Your Name</label>
       <input type="text" id="name" name="name" placeholder="Enter your name" required
         class="w-full p-3 border border-gray-300 rounded-lg mb-4 focus:outline-none focus:ring-2 focus:ring-teal-500">
