--- a/manuscriptsubmission.html
+++ b/manuscriptsubmission.html
@@ -79,11 +79,10 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
+                <li><a href="SS.html" class="dropdown-item">Call for Special Session</a></li>
                 <li><a href="crucialdates.html" class="dropdown-item">Important Dates</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
-                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Gauidlines</a></li>
+                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Guidelines</a></li>
                 <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
                 </ul>
             </li>
@@ -122,14 +121,14 @@
 
 
 
-  <main class="container mx-auto p-6">
+  <main class="container mx-auto p-12">
     <h1 class="text-4xl font-bold mb-4 mt-40">Manuscript Submission</h1>
     <ol class="list-decimal pl-5 space-y-2">
       <li>Prepare your manuscript according to the guidelines provided.</li>
-      <li>Submit your manuscript through the <a href="#" class="text-blue-500 hover:underline">online submission portal</a>.</li>
+      <li>Submit your manuscript through the <a href="https://cmt3.research.microsoft.com/ICE2CPT2025" class="text-blue-500 hover:underline">online submission portal</a>.</li>
       <li>Ensure all required documents are included in the submission.</li>
     </ol>
-    <p class="mt-4">For more details, contact <a href="mailto:support@ICE2CPT2024.com" class="text-blue-500 hover:underline">support@ICE2CPT2024.com</a>.</p>
+    <p class="mt-4">For more details, contact <a href="mailto:suryaprakash.ee@nitjsr.ac.in" class="text-blue-500 hover:underline">suryaprakash.ee@nitjsr.ac.in</a>, <a href="mailto:krnishant125@gmail.com" class="text-blue-500 hover:underline">krnishant125@gmail.com</a>.</p>
   </main>
   
  <!-- Footer-->
