--- a/registrationdetails.html
+++ b/registrationdetails.html
@@ -80,11 +80,10 @@
             <li class="nav-item dropdown text-white">
               <a class="nav-link mx-2 dropdown-toggle align-items-center" role="button" id="pages" data-bs-toggle="dropdown" aria-expanded="false">Authors</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
-                <li><a href="callforpapers.html" class="dropdown-item">Regular Session</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Call for Special Session</a></li>
+                <li><a href="callforpapers.html" class="dropdown-item">Call for Papers</a></li>
+                <li><a href="SS.html" class="dropdown-item">Call for Special Session</a></li>
                 <li><a href="crucialdates.html" class="dropdown-item">Important Dates</a></li>
-                <li><a href="callforpapers.html" class="dropdown-item">Approved Speacial Session</a></li>
-                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Gauidlines</a></li>
+                <li><a href="manuscriptsubmission.html" class="dropdown-item">Paper Submission Guidelines</a></li>
                 <li><a href="confprogram.html" class="dropdown-item">Conference Program</a></li>
                 </ul>
             </li>
