--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -134,24 +134,24 @@
     <p class="mb-6">Meet the distinguished members of our International Advisory Committee who play a key role in shaping the content and structure of the conference.</p>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/Andy.jpg" alt="Committee Member 1" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <img src="images/Andy.png" alt="Committee Member 1" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. Andy Chen</h2>
         <p class="text-sm text-gray-600">IEEE Systems Council 2025 President, President & CEO, Catronic Enterprise, Canada
         </p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/Hironori.jpeg" alt="Committee Member 2" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <img src="images/Hironori.png" alt="Committee Member 2" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. Hironori Washizaki</h2>
         <p class="text-sm text-gray-600">IEEE Computer Society 2025 President, Waseda University</p>
       </div>
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/Hadi.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <img src="images/Hadi.png" alt="Committee Member 3" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. Hadi Y. Kanaan</h2>
         <p class="text-sm text-gray-600">Saint Joseph University of Beirut</p>
       </div>
 
       <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/Atif.jpg" alt="Committee Member 3" class="w-24 h-24 mx-auto rounded-full mb-3">
+        <img src="images/Atif.png" alt="Committee Member 3" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
         <h2 class="text-lg font-bold">Prof. ATIF IQBAL</h2>
         <p class="text-sm text-gray-600">Department of Electrical Engineering, Qatar University, Doha, Qatar</p>
       </div>
