--- a/keynotespeakers.html
+++ b/keynotespeakers.html
@@ -120,7 +120,7 @@
     <h1 class="text-3xl font-bold mb-7 mt-40">Keynote Speakers</h1>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
     <div class="p-4 bg-white shadow-md rounded-lg text-center">
-        <img src="images/Saifur.jpg" alt="Member 1" class="w-24 h-24 mx-auto rounded-full mb-3 img-thumbnail">
+        <img src="images/Saifur.png" alt="Member 1" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
         <a target="_blank" href="https://ece.vt.edu/people/profile/rahman.html"> <h2 class="text-lg font-bold">Prof. (Dr.) Saifur Rahman</h2></a>
         <p class="text-sm text-gray-600"><b>2023 IEEE President & CEO Director</b></p>
           <p class="text-sm text-gray-600"><b>Virginia Tech. Advanced Research Institute, USA</b></p>
