--- a/internationaladvisory.html
+++ b/internationaladvisory.html
@@ -155,6 +155,13 @@
         <h2 class="text-lg font-bold">Prof. ATIF IQBAL</h2>
         <p class="text-sm text-gray-600">Department of Electrical Engineering, Qatar University, Doha, Qatar</p>
       </div>
+      <div class="p-4 bg-white shadow-md rounded-lg text-center">
+        <img src="images/SN.png" alt="Committee Member 3" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
+        <h2 class="text-lg font-bold">Prof. Sri Niwas Singh</h2>
+        <p class="text-sm text-gray-600">Director, Atal Bihari Vajpayee- Indian Institute of Information Technology and Management (ABV-IIITM), Gwalior, India</p>
+      </div>
+
+      
     </div>
   </main>
   
