--- a/generalchair.html
+++ b/generalchair.html
@@ -129,7 +129,7 @@
             <!-- <div class="detail-box"> -->
             <div class="heading_container" id="venue">
               <a target="_blank" href="https://nitjsr.ac.in/">
-                <img style="height: 100px;" src="images/veer.jpeg" alt="logo" class="mb-1 mx-auto img-fluid" width="100" height="80">
+                <img src="images/veer.png" alt="Committee Member 3" class="w-50 h-30 mx-auto rounded-full mb-2 img-fluid">
               </a>
             </div>
           </div>
