--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
   <title>ICE2CPT - International Conference on Electrical, Electronics and Computer Science with Advance Power Technologies- A Future Trend</title>
   <meta charset="utf-8">
   <link rel="icon" href="images/logo1.png" type="image/x-icon">
@@ -24,6 +25,8 @@
 </head>
 
 <body>
+ 
+
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <defs>
       <symbol xmlns="http://www.w3.org/2000/svg" id="link" viewBox="0 0 24 24">
@@ -108,6 +111,7 @@
     </div>
   </div>
 
+      
   <nav class="main-menu d-flex navbar fixed-top navbar-expand-lg p-2 py-3 p-lg-4 py-lg-4 mx-auto">
 
     <div class="w-100 py-2 border-bottom" style="background-color: #efefef9b; border-radius: 30px;" >
@@ -202,7 +206,7 @@
     </div>
   </nav>
 
-
+  
   <!-- <section id="hero">
     <div class="container-fluid">
       <div class="row">
@@ -237,6 +241,10 @@
   </section> -->
   <section id="hero">
     <div class="container-fluid">
+
+
+
+      
       <div class="row">
         <div class="col-md-15">
           <div class="carousel slide" data-ride="carousel" id="carousel">
@@ -251,7 +259,54 @@
        </div>
   </section>
 
+  <div class="marquee-container">
+    <div class="marquee-content">
+      <a href="https://cmt3.research.microsoft.com/ICE2CPT2025">Click Here for Paper Submission</a> 
+        &nbsp;&nbsp;&nbsp;&nbsp; 
+        <a href="CSSF.pdf">Click Here for Speacial Session</a>
+        &nbsp;&nbsp;&nbsp;&nbsp; 
+        <a href="SST.docx">Click Here to download Speacial Session Template</a>
+    </div>
+</div>
 
+<style>
+.marquee-container {
+    width: 100%;
+    overflow: hidden;
+    background-color: black;
+    padding: 10px;
+    color: rgb(11, 3, 3);
+    font-size: 20px;
+    white-space: nowrap;
+}
+
+.marquee-content {
+    display: inline-block;
+    white-space: nowrap;
+    animation: marquee-scroll 10s linear infinite;
+}
+
+@keyframes marquee-scroll {
+    from { transform: translateX(100%); }
+    to { transform: translateX(-100%); }
+}
+
+.marquee-container a {
+    color: white;
+    text-decoration: none;
+}
+
+.marquee-container a:hover {
+    text-decoration: underline;
+}
+</style>
+
+
+
+
+
+
+  
 </section>
 <style> @media (min-width: 992px) { /* Applies to large screens (≥992px) */
     .custom-img {
