--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
   <div class="marquee-container">
     <div class="marquee-content">
       <a href="https://cmt3.research.microsoft.com/ICE2CPT2025">Click Here for Paper Submission</a> 
-        &nbsp;&nbsp;&nbsp;&nbsp; 
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
         <a href="CSSF.pdf">Click Here for Speacial Session</a>
-        &nbsp;&nbsp;&nbsp;&nbsp; 
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
         <a href="SST.docx">Click Here to download Speacial Session Template</a>
     </div>
 </div>
@@ -283,7 +283,7 @@
 .marquee-content {
     display: inline-block;
     white-space: nowrap;
-    animation: marquee-scroll 10s linear infinite;
+    animation: marquee-scroll 25s linear infinite;
 }
 
 @keyframes marquee-scroll {
